# loggerpp

./: CMakeLists.txt  README.md
cmake/: logging-config.cmake.in
examples/: main.cpp
include/: logger_ostream.h  logger_ref.h  logging.h
src/: logging.cpp
